# enhancing-ntp4jets

./: .env.example  .gitignore  README.md  pyproject.toml  todo.md
configs/callbacks/: orbit_plotting_callback.yaml  orbit_plotting_callbacks.yaml  token_export_callback.yaml
configs/data/: orbit_jet_parquet.yaml  orbit_parquet.yaml
configs/experiment/: orbit_jet_parquet_smoke.yaml  orbit_jet_puppi_ak8_ggHbb_minbias.yaml  orbit_jet_puppi_ak8_ggHbb_minbias_wandb_smoke.yaml  orbit_jet_puppi_ak8_production.yaml  orbit_parquet_smoke.yaml
configs/feature_dict/: feature_dict_orbit_absolute.yaml  feature_dict_orbit_jet_ak4_absolute.yaml  feature_dict_orbit_jet_ak8_absolute.yaml  feature_dict_orbit_jet_puppi_ak4_absolute.yaml  feature_dict_orbit_jet_puppi_ak8_absolute.yaml
configs/logger/: comet.yaml  wandb.yaml
configs/model/: model_vqvae_transformer.yaml  model_vqvae_transformer_split.yaml  model_vqvae_transformer_split_fsq_mu_15x3.yaml  model_vqvae_transformer_split_fsq_mu_21x3.yaml  model_vqvae_transformer_split_fsq_mu_25x3.yaml  model_vqvae_transformer_split_fsq_mu_2_3_3_4_4_5_alpha_128.yaml  model_vqvae_transformer_split_fsq_mu_2_3_3_5_alpha_128.yaml  model_vqvae_transformer_split_fsq_mu_35x3.yaml  model_vqvae_transformer_split_vq_mu_16_fsq_alpha_32.yaml  (+3 more)
configs/paths/: default.yaml
docker/: requirements.txt
gabbro/: train.py
scripts/: collect_orbit_multirun.py  condor_run_training.sh  evaluate_token_quality.py  filter_sparse_orbit_parquet.py  generate_test_parquet.py  make_eos_manifests.py  smoke_test_orbit_parquet.sh
vqtorch/: setup.py
(+21 files in other folders)
