[project]
name = "enhancing-ntp4jets"
version = "0.1.0"
description = "Tokenization and transformer models for particle physics data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "awkward>=2.7.3",
  "fastjet>=3.4.2.1",
  "h5py>=3.12.1",
  "hydra-colorlog>=1.2.0",
  "hydra-core>=1.3.2",
  "lightning>=2.5",
  "matplotlib>=3.8.4",
  "numpy>=2",
  "pandas>=2.2.3",
  "pyarrow>=19",
  "pyrootutils>=1.0.4",
  "rich",
  "scipy",
  "torch",
  "tqdm",
  "uproot>=5.1.2",
  "vector",
  "vqtorch @ git+https://github.com/minyoungg/vqtorch.git@02e60a19bd742c17b0bf3e1925f23796d54cbeac",
  "wandb>=0.27.0",
]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.black]
line-length = 99
preview = "True"

[tool.ruff]
include = ["*.ipynb"]
line-length = 99
